<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.nesstech.metube.webview.WebviewActivity">


    <item
        android:id="@+id/action_back"
        android:title="@string/back"
        android:icon="@drawable/ic_back"
        app:showAsAction="always" />

     <item
        android:id="@+id/action_forword"
        android:title="@string/forword"
        android:icon="@drawable/ic_forword"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_home"
        android:title="@string/home"
        android:icon="@drawable/ic_home_white"
        app:showAsAction="always" />


    <item
        android:id="@+id/action_bookmarks"
        android:title="@string/bookmarks"
        android:icon="@drawable/ic_bookmark_white"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_web"
        android:title="@string/openInBrowser"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_set_as_home"
        android:title="@string/set_as_home"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_backgroundPlay"
        android:checkable="true"
        android:checked="true"
        android:title="@string/playInBackground"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share"
        android:title="@string/share"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_download"
        android:title="@string/download"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_accept_cookies"
        android:title="@string/acceptCookies"
        android:checkable="true"
        android:checked="true"
        app:showAsAction="never" />


</menu>
