<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/error_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="visible">

        <TextView
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:drawableLeft="@drawable/ic_alert"
            android:drawableStart="@drawable/ic_alert"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:text="@string/error_network" />

        <TextView
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:text="@string/error_something_went_wrong" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="8dp"
            android:background="@color/colorAccent">

            <Button
                android:id="@+id/error_btn_retry"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="@string/retry"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>

</merge>